--- a/notebook/01_financial-analysis-notebook.ipynb
+++ b/notebook/01_financial-analysis-notebook.ipynb
@@ -514,15 +514,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "f-string expression part cannot include a backslash (2361059825.py, line 31)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[12], line 31\u001b[0;36m\u001b[0m\n\u001b[0;31m    \"\"\"\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m f-string expression part cannot include a backslash\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PDF report generated: financial_report.pdf\n",
+      "PDF report has been generated.\n"
      ]
     }
    ],
