--- a/notebook/01_financial-analysis-notebook.ipynb
+++ b/notebook/01_financial-analysis-notebook.ipynb
@@ -8,6 +8,11 @@
     "\n",
     "This notebook contains all the necessary code to analyze financial data, categorize transactions, generate insights using AI, and create PDF reports. No external .py files are required.\n",
     "\n",
+    "## License\n",
+    "\n",
+    "This notebook is licensed under the GPLv3 License. See the LICENSE file for more details.\n",
+    "- Copyright (C) 2024 [Vincent Koc](https://github.com/vincentkoc)\n",
+    "- Copyright (C) 2024 [Hung Nguyen](https://github.com/hung-ngm)\n",
     "## Setup\n",
     "\n",
     "First, let's import the necessary libraries and set up our environment."
