--- a/notebook/02_gradio-gpt.ipynb
+++ b/notebook/02_gradio-gpt.ipynb
@@ -8,6 +8,14 @@
     "\n",
     "This notebook contains all the necessary code to set up a Gradio UI for the AI Financial Advisor and integrate it with GPT for generating financial insights. No external .py files are required.\n",
     "\n",
+    "## License\n",
+    "\n",
+    "This notebook is licensed under the GPLv3 License. See the LICENSE file for more details.\n",
+    "\n",
+    "Copyright (C) 2024 [Vincent Koc](https://github.com/vincentkoc)\n",
+    "\n",
+    "Copyright (C) 2024 [Hung Nguyen](https://github.com/hung-ngm)\n",
+    "\n",
     "## Setup\n",
     "\n",
     "First, let's import the necessary libraries and set up our environment."
